# sarf

./: .gitignore  CMakeLists.txt  Makefile  README.md
lib/: CMakeLists.txt  archive.c  archive.h  errors.c  errors.h  flags.h  libsarf.c  libsarf.h  libsarf_add_dir.c  libsarf_add_file.c  libsarf_close.c  libsarf_count_entries.c  libsarf_entry.c  libsarf_err2str.c  libsarf_extract.c  libsarf_init.c  libsarf_open.c  libsarf_read.c  libsarf_read_entry.c  libsarf_remove.c  libsarf_stat.c  libsarf_write.c  libsarf_write_entry.c  libtest.c  limits.h  sarf.c  sarf.h  sarf_close.c  sarf_entry.c  sarf_error.c  sarf_int.h  sarf_open.c  sarf_read.c  sarf_read_entry.c  sarf_skip_file_data.c  sarf_write.c  sarf_write_entry.c  utils.c  utils.h
libtest/: CMakeLists.txt  sarf.c  utils.h
src/: CMakeLists.txt  sarf.c  utils.c
